Your message here

--- a/arc_eval.ipynb
+++ b/arc_eval.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import os\n",
@@ -21,11 +20,10 @@
     "from dataset.common import inverse_dihedral_transform\n",
     "\n",
     "\n",
-    "DATASET_PATH = \"data/arc-aug-1000\"  # ARC-1\n",
+    "DATASET_PATH = \"data/sudoku-extreme-1k-aug-1000\"  # ARC-1\n",
     "# DATASET_PATH = \"data/arc-2-aug-1000\"  # ARC-2\n",
     "\n",
-    "CHECKPOINT_PATH = \"checkpoints/Arc-aug-1000 ACT-torch/HierarchicalReasoningModel_ACTV1 amphibian-turaco/step_414456\"\n",
-    "\n",
+    "CHECKPOINT_PATH = r\"C:\\Users\\user\\Downloads\\checkpoint\"\n",
     "\n",
     "PAD_PUZZLE_IDENTIFIER = 0\n",
     "\n",
@@ -42,13 +40,39 @@
     "    \"#7FDBFF\",  # symbol_8: teal\n",
     "    \"#870C25\"   # symbol_9: brown\n",
     "])"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-08-08T13:14:49.278326Z",
+     "start_time": "2025-08-08T13:14:49.256701400Z"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-08T13:14:51.101821300Z",
+     "start_time": "2025-08-08T13:14:50.981733Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'puzzle_identifiers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[4], line 175\u001B[0m\n\u001B[0;32m    171\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m i, k \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(Ks):\n\u001B[0;32m    172\u001B[0m         \u001B[38;5;28mprint\u001B[39m (\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mk\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m-shot: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mcorrect[i]\u001B[38;5;250m \u001B[39m\u001B[38;5;241m/\u001B[39m\u001B[38;5;250m \u001B[39m\u001B[38;5;28mlen\u001B[39m(puzzle_labels)\u001B[38;5;250m \u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;250m \u001B[39m\u001B[38;5;241m100\u001B[39m\u001B[38;5;132;01m:\u001B[39;00m\u001B[38;5;124m.2f\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m--> 175\u001B[0m \u001B[43mtest\u001B[49m\u001B[43m(\u001B[49m\u001B[43mvisualize\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[4], line 67\u001B[0m, in \u001B[0;36mtest\u001B[1;34m(visualize, Ks)\u001B[0m\n\u001B[0;32m     66\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21mtest\u001B[39m(visualize, Ks\u001B[38;5;241m=\u001B[39m[\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m10\u001B[39m, \u001B[38;5;241m100\u001B[39m, \u001B[38;5;241m1000\u001B[39m]):\n\u001B[1;32m---> 67\u001B[0m     identifier_map, all_preds \u001B[38;5;241m=\u001B[39m \u001B[43mload_identifiers_and_preds\u001B[49m\u001B[43m(\u001B[49m\u001B[43mDATASET_PATH\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mCHECKPOINT_PATH\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     69\u001B[0m     global_hmap \u001B[38;5;241m=\u001B[39m {}\n\u001B[0;32m     71\u001B[0m     \u001B[38;5;66;03m# Get puzzles and corresponding answers\u001B[39;00m\n",
+      "Cell \u001B[1;32mIn[4], line 19\u001B[0m, in \u001B[0;36mload_identifiers_and_preds\u001B[1;34m(dataset_path, checkpoint_path)\u001B[0m\n\u001B[0;32m     16\u001B[0m all_preds \u001B[38;5;241m=\u001B[39m {k: torch\u001B[38;5;241m.\u001B[39mcat(v, dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m) \u001B[38;5;28;01mfor\u001B[39;00m k, v \u001B[38;5;129;01min\u001B[39;00m all_preds\u001B[38;5;241m.\u001B[39mitems()}\n\u001B[0;32m     18\u001B[0m \u001B[38;5;66;03m# Remove paddings\u001B[39;00m\n\u001B[1;32m---> 19\u001B[0m mask \u001B[38;5;241m=\u001B[39m \u001B[43mall_preds\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mpuzzle_identifiers\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;241m!=\u001B[39m PAD_PUZZLE_IDENTIFIER\n\u001B[0;32m     20\u001B[0m all_preds \u001B[38;5;241m=\u001B[39m {k: v[mask] \u001B[38;5;28;01mfor\u001B[39;00m k, v \u001B[38;5;129;01min\u001B[39;00m all_preds\u001B[38;5;241m.\u001B[39mitems()}\n\u001B[0;32m     22\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m identifier_map, all_preds\n",
+      "\u001B[1;31mKeyError\u001B[0m: 'puzzle_identifiers'"
+     ]
+    }
+   ],
    "source": [
     "def load_identifiers_and_preds(dataset_path: str, checkpoint_path: str):\n",
     "    # Load puzzle identifiers\n",
@@ -226,6 +250,15 @@
     "\n",
     "test(visualize=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
